Include jQuery CDN and Script tags

--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
 
 
   </div>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script src="decoder.js"></script>
+  <script src="encoder.js"></script>
 </body>
 </html>
