Include Bootstrap CDN

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="animate.css" rel="stylesheet" type="text/css">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css" type="text/css">
   <title>Caesars Cipher</title>
 </head>
@@ -12,7 +13,7 @@
   <h1>Caeaser's Cipher</h1>
   <div class="container">
 
-
+  
 
   </div>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
