--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <h1>Caeaser's Cipher</h1>
-  <div class="container">
+  <div class="container col-md-12">
 
   <form action="">
     <input type="text" name="textToDecode" id="decode">
