--- a/index.html
+++ b/index.html
@@ -5,21 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="animate.css" rel="stylesheet" type="text/css">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css" type="text/css">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="decoder.js"></script>
   <title>Caesars Cipher</title>
 </head>
-<body>
-  <h1>Caeaser's Cipher</h1>
-  <div class="container col-md-12">
-
-  <form action="">
-    <input type="text" name="textToDecode" id="decode">
-    <button type="submit" name="button" onclick="(decoderEncoder(document.getElementById('decode').value));">Alert Value</button>
+<body class="dark-body">
+  <div class="container dark-container">
+  <div class="header">
+    <h1>Caeaser's Cipher</h1>
+  </div>
+  <form>
+    <input type="text" name="textToDecode" id="decode"><br>
+    <div class="buttons">
+      <button type="submit" name="button"
+              onclick="(decoderEncoder(document.getElementById('decode').value));">
+        Encode Message!
+      </button>
+      <button type="submit" name="button"
+              onclick="">
+        Decode Message!
+      </button>
+    </div>
   </form>
-
   </div>
 </body>
 </html>
