--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="theme" class="container">
   <!-- header class -->
   <div id="header-tag">
-    <h1>Caeaser's Cipher</h1>
+    <h1 class="header">Caeaser's Cipher</h1>
   </div>
   <form>
     <input type="text" name="textToDecode" placeholder="Text to encode/decode"
@@ -29,7 +29,7 @@
       <input type="button" name="button" class="right-button"
           onclick="decoderEncoder(document.getElementById('decode').value)()"
           value="Decode Message!">
-      <div class="output">
+      <div class="output" id="output-box">
 
       </div>
     </div>
