Remove third theme (no neutral theme) bright and default only ones left

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <script src="decoder.js"></script>
   <title>Caesars Cipher</title>
 </head>
-<body>
+<body class="bright-body">
   <!-- container class -->
-  <div id="theme" class="container">
-  <!-- header class -->
-  <div id="header-tag">
-    <h1 class="header">Caeaser's Cipher</h1>
+  <div id="theme" class="container bright-container">
+  <!-- heading class -->
+  <div id="heading-tag">
+    <h1 class="heading">Caeaser's Cipher</h1>
   </div>
   <form>
     <input type="text" name="textToDecode" placeholder="Text to encode/decode"
